--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.20.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.10.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
